# MyCal

./: .clang-format  .clangd  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LicenseBlob.txt  Makefile  README.md  app  autobuild.sh  build.ninja  cmake_install.cmake  dsc.xml  idea.txt  install.sh
Licenses/: BGM.txt  Font.txt
gnudc/: CHANGES  Makefile  README  README~  auto.sh  config.h  env.sh
gnudc/dc/: #dc.c#  Makefile  dc
gnudc/lib/: Makefile
other/: LicenseBlob.txt  clean.sh  ind.sh  indc.sh  indc.sh~  info.md  info.md~  inm.sh  int.sh  muttconfig.sh  rnd.sh  rndc.sh  rnm.sh  rnt.sh
pkg/: README.md  app  asc.xml  rsr
src/: #planner.c#  asplanner.c  launcher.c  launcher.c~  license.S  main.c  planner.c  planner.c~  stuff.h  tutils.c  tutils.h  ulauncher.c  ulauncher.c~
src/rsr/: main.c
testing/: app  dsc.xml  rsr
